--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -83,6 +83,13 @@
           <p mat-line> Utenti attivi </p>
         </a>
 
+        <a mat-list-item [routerLink]="['/all-games']" routerLinkActive="active">
+          <mat-icon mat-list-icon>
+            sports_esports
+          </mat-icon>
+          <p mat-line> Partite </p>
+        </a>
+
         <a mat-list-item [routerLink]="['/account/profile']">
           <mat-icon mat-list-icon>person</mat-icon>
           <p mat-line> Account </p>
