feat: account-page

--- a/src/app/features/account/change-password/change-password.component.html
+++ b/src/app/features/account/change-password/change-password.component.html
@@ -3,7 +3,7 @@
 
   <div fxLayout="row">
 
-    <div fxFlex="40%" fxFlex.md="60%" fxFlex.sm="50%" fxFlex.xs="100%">
+    <div class="change-pwd-container" fxFlex="40%" fxFlex.md="60%" fxFlex.sm="85%" fxFlex.xs="100%">
 
       <mat-form-field class="full-width">
         <input matInput placeholder="Current Password" formControlName="currentPassword" [type]="hideCurrentPassword ? 'password' : 'text'"
@@ -40,7 +40,7 @@
         </mat-error>
       </mat-form-field>
 
-      <button mat-raised-button color="primary" [disabled]="form.invalid || disableSubmit" (click)="changePassword()">Save</button>
+      <button mat-raised-button class="save-button" [disabled]="form.invalid || disableSubmit" (click)="changePassword()">Save</button>
 
     </div>
 
