--- a/src/app/features/account/account-page/account-page.component.html
+++ b/src/app/features/account/account-page/account-page.component.html
@@ -1,33 +1,25 @@
 <div class="container" fxLayout="row" fxLayoutAlign="center none">
 
-  <div fxFlex="95%">
-
-    <mat-card>
-      <mat-card-content>
-        <h2>My Profile</h2>
-
-        <div fxLayout="row" fxLayout.sm="column" fxLayout.xs="column">
+  <div fxFlex="60%" fxFlex.xs="100%" fxFlex.sm="80%">
+    <mat-card class="profile-card" fxLayout="row" fxLayoutAlign="none none">
+      <div class="blue" fxFlex="35%" fxFlex.xs="100%" fxFlex.sm="50%">
+        <div fxLayout="column" fxLayout.sm="column" fxLayout.xs="column">
 
           <div fxFlex="30%" fxFlex.sm="95%" fxFlex.xs="95%">
             <app-profile-details></app-profile-details>
           </div>
-
-          <div fxFlex></div>
-
-          <div fxFlex="65%" fxFlex.sm="95%" fxFlex.xs="950%">
-
-
-            <mat-tab-group>
-              <mat-tab label="Change Password">
+        </div>
+      </div>
+      <div class="white" fxFlex="75%" fxFlex.lt-md="50%">
+        <div fxFlex></div>
+          <div fxFlex="100%">
+            <mat-tab-group class="change-pwd" fxFlex.lt-md="100%">
+              <mat-tab class="change-pwd-label" label="Change Password"> 
                 <app-change-password></app-change-password>
               </mat-tab>
             </mat-tab-group>
-
-
           </div>
-
         </div>
-      </mat-card-content>
     </mat-card>
   </div>
 
