--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,10 +1,10 @@
 <div class="navbar-container" [class.example-is-mobile]="mobileQuery.matches">
 
   <!-- Top navbar -->
-  <mat-toolbar class="navbar" color="primary">
+  <mat-toolbar class="navbar">
 
     <button mat-icon-button (click)="snav.toggle()">
-      <mat-icon>menu</mat-icon>
+      <mat-icon class="whiteIcon">menu</mat-icon>
     </button>
 
     <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
@@ -16,7 +16,7 @@
     <span class="navbar-spacer"></span>
 
     <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
-      <mat-icon matBadge="2" matBadgeColor="accent">notifications</mat-icon>
+      <mat-icon class="whiteIcon" matBadge="2" matBadgeColor="accent">notifications</mat-icon>
     </button>
     <mat-menu #notificationMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
 
@@ -32,8 +32,8 @@
 
 
     <button mat-button [matMenuTriggerFor]="userMenu">
-      <mat-icon>person</mat-icon>
-      <span fxShow fxHide.xs>
+      <mat-icon class="whiteIcon">person</mat-icon>
+      <span class="username" fxShow fxHide.xs>
         {{userName}}
       </span>
     </button>
