--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -14,13 +14,59 @@
       </div>
       <mat-icon> </mat-icon>
     </div> -->
-<div class="row">
-  <div class="col-sm-8 col-6">
     <div class="row">
-      <div class="col-12 text-center fill-viewport-max-20">
-        <h3 class=" h3 text-center text-primary">Maraffa</h3>
-          <!-- <button class="btn btn-primary my-3" ngbDropdownToggle> Nuova Partita</button> -->
-            <h5 class="dropdown-header">2 giocatori</h5>
+      <div class="row">
+        <div class="col-12 text-center fill-viewport-max-20 dashboard-container">
+          <div class="vertical-container text-center">
+            <div class="button-container">
+              <button mat-flat-button class="blue-button number-of-players" [matMenuTriggerFor]="fourPlayersMenu">4 giocatori
+                <mat-icon mat-list-icon>people</mat-icon>
+                <mat-icon mat-list-icon>people</mat-icon>
+                </button>
+              <mat-menu #fourPlayersMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
+          
+                <a mat-menu-item class="menu-item" [routerLink]="['/account/profile']">
+                  <span>ai 31</span>
+                </a>
+          
+                <a mat-menu-item class="menu-item" [routerLink]="['/auth/login']">
+                  <span>ai 41</span>
+                </a>
+              </mat-menu>
+
+
+              <button mat-flat-button class="blue-button number-of-players" [matMenuTriggerFor]="twoPlayersMenu">2 giocatori <mat-icon mat-list-icon>
+                  people</mat-icon>
+              </button>
+              <mat-menu #twoPlayersMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
+          
+                <a mat-menu-item class="menu-item" [routerLink]="['/account/profile']">
+                  <span>ai 31</span>
+                </a>
+          
+                <a mat-menu-item class="menu-item" [routerLink]="['/auth/login']">
+                  <span>ai 41</span>
+                </a>
+              </mat-menu>
+            </div>
+            <div class="textarea-container">
+              <textarea id="messages" name="messages" rows="15" cols="70"
+                placeholder="  Scrivi un nuovo messaggio"></textarea>
+            </div>
+          </div>
+          <div class="games-container">
+            <h2 class="lightblue-text">Partite:</h2>
+            <div class="games-buttons">
+              <button mat-flat-button class="blue-button"><mat-icon
+                  class="waiting-player">fiber_manual_record</mat-icon>game1</button>
+              <button mat-flat-button class="blue-button"><mat-icon
+                  class="playing">fiber_manual_record</mat-icon>game2</button>
+            </div>
+            <h2 class="lightblue-text">Giocatori:</h2>
+            <h4 class="text">Sofy<br>Matte<br></h4>
+          </div>
+          <!--delete <button class="btn btn-primary my-3" ngbDropdownToggle> Nuova Partita</button> -->
+          <!--<h5 class="dropdown-header">2 giocatori</h5>
             <button mat-raised-button color="primary" (click)="createGame(21,2)">21 punti</button>
             <button mat-raised-button color="primary" (click)="createGame(31,2)">31 punti</button>
             <button mat-raised-button color="primary" (click)="createGame(41,2)">41 punti</button>
@@ -31,40 +77,35 @@
             <button mat-raised-button color="primary" (click)="createGame(31,2)">31 punti</button>
             <button mat-raised-button color="primary" (click)="createGame(41,2)">41 punti</button>
             <button mat-raised-button color="primary" (click)="createGame(51,2)">51 punti</button>
-      </div>
-      <div class="col-12 scrollable-div-y fill-viewport-max-50">
-        <!-- <app-all-chat></app-all-chat> -->
-      </div>
+      </div>-->
+        </div>
+          <div id="played-games" class="text-center fill-viewport-max-10">
+            <h2 class="text"><b>{{getGameCount()}}</b> partite giocate</h2>
+          </div>
 
-      <div  class="col-12 text-center fill-viewport-max-10">
-        <br />
-        <h6><b>{{getGameCount()}}</b> partite giocate</h6>
-      </div>
-
-      <div class="col-12 text-center small fill-viewport-max-30">
-        <a href="donazione.html"><img src="https://www.paypalobjects.com/it_IT/IT/i/btn/btn_donate_SM.gif" /></a>
-        <small>
-          <br /><b>Sostieni lo sviluppo e il potenziamento dei Server</b>
-          <br />
-        </small>
-        <!--<div class="alert alert-primary small" style="margin-top:5px;padding:0.2rem">
+          <div class="col-12 text-center small fill-viewport-max-30">
+            <a class="blue-button" mat-flat-button href="donazione.html" target="_blank">Donazione</a>
+            <p class="text">
+              <small>
+                <br /><b>Sostieni lo sviluppo e il potenziamento dei Server</b>
+                <br />
+              </small>
+              <!--<div class="alert alert-primary small" style="margin-top:5px;padding:0.2rem">
           in caso di malfunzionamento per eccessivo traffico giocate sul
           <a href="https://maraffaapp.azurewebsites.net/">server di backup</a>
         </div>-->
-        <small>
-          &copy; Thomas Casali - Alessandra Lumini - Sofia Tosi - Santoro Matteo
-        </small>
+              <small>
+                &copy; Thomas Casali - Alessandra Lumini - Sofia Tosi - Matteo Santoro
+              </small>
+            </p>
+          </div>
       </div>
+      <!--<div class="col-sm-4 col-6 fill-viewport-max-100 scrollable-div-y">
+      <button class="btn btn-outline-dark btn-sm btn-block my-2" (click)="rename()">Cambia nome</button> -->
+      <!-- <app-active-players></app-active-players>
+      <app-running-games></app-running-games> -->
+      <!-- <app-running-games></app-running-games>
+      <app-active-players></app-active-players> -->
+      <!--</div>-->
     </div>
-    </div>
-  <div class="col-sm-4 col-6 fill-viewport-max-100 scrollable-div-y">
-    <!-- <button class="btn btn-outline-dark btn-sm btn-block my-2" (click)="rename()">Cambia nome</button> -->
-     <!-- <app-active-players></app-active-players>
-     <app-running-games></app-running-games> -->
-     <!-- <app-running-games></app-running-games>
-     <app-active-players></app-active-players> -->
   </div>
-</div>
-
-  </div>
-</div>
