--- a/src/app/shared/layout/layout.component.css
+++ b/src/app/shared/layout/layout.component.css
@@ -76,3 +76,52 @@ a.mat-list-item.active {
 .username{
   color: white;
 }
+
+.navbar-container{
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+}
+
+.cont{
+  flex: 1; /* Allow content to grow */
+  overflow-y: auto;
+}
+
+.oval-menu{
+  background-color: #007EA8;
+  border-radius: 25px;
+  /*width: 4%;*/
+  margin: 10% 2% 10%;
+  position: fixed;
+  z-index: 2;
+  left: 1%;
+
+}
+
+@media (min-width: 990px) {
+  .oval-menu{
+    display: flex;
+    flex-direction: column;
+  }
+
+  #menu-button, .sidenav{
+    display: none;
+  }
+}
+
+@media (max-width: 990px) {
+  .oval-menu{
+    display: none;
+  }
+  #menu-button{
+    display: show;
+  }
+}
+
+
+.oval-menu mat-icon{
+  color: white;
+  padding: 3%;
+  margin: 10%;
+}
