--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,9 +1,8 @@
 <div class="navbar-container" [class.example-is-mobile]="mobileQuery.matches">
 
-  <!-- Top navbar -->
+  <!-- header -->
   <mat-toolbar class="navbar">
-
-    <button mat-icon-button (click)="snav.toggle()">
+    <button id="menu-button" mat-icon-button (click)="snav.toggle()">
       <mat-icon class="whiteIcon">menu</mat-icon>
     </button>
 
@@ -41,7 +40,7 @@
 
       <a mat-menu-item [routerLink]="['/account/profile']">
         <mat-icon>person</mat-icon>
-        <span>Account</span>
+        <span>Profile</span>
       </a>
 
       <a mat-menu-item [routerLink]="['/auth/login']">
@@ -53,8 +52,8 @@
 
   </mat-toolbar>
 
-  <mat-sidenav-container class="navbar-sidenav-container">
-    <!-- Side nav -->
+  <!-- menu-navbar -->
+<mat-sidenav-container class="navbar-sidenav-container">
     <mat-sidenav #snav [opened]="!mobileQuery.matches" [mode]="mobileQuery.matches ? 'over' : 'side'"
       [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" class="sidenav">
 
@@ -135,18 +134,70 @@
     </mat-sidenav>
 
     <!-- Main content -->
-    <mat-sidenav-content class="sidenav-content">
+    <!--<mat-sidenav-content class="sidenav-content">
 
       <div class="progress-bar-container">
         <mat-progress-bar color="accent" mode="indeterminate" *ngIf="spinnerService.visibility | async">
-        </mat-progress-bar>
+        </mat-progress-bar>-->
         <!-- <mat-spinner class="spinner" [diameter]="50" *ngIf="showSpinner"></mat-spinner> -->
-      </div>
+      <!--</div>
 
 
       <router-outlet></router-outlet>
 
     </mat-sidenav-content>
-  </mat-sidenav-container>
+  </mat-sidenav-container>-->
+ <div class="oval-menu">
+    <mat-nav-list>
+      <a mat-list-item [routerLink]="['/dashboard']" routerLinkActive="active" class="menu-item">
+        <mat-icon mat-list-icon>
+          dashboard
+        </mat-icon>
+      </a>
 
+      <a mat-list-item [routerLink]="['/chat-all']" routerLinkActive="active" class="menu-item">
+        <mat-icon mat-list-icon>
+          forum 
+        </mat-icon>
+      </a>
+
+      <a mat-list-item [routerLink]="['/users']" routerLinkActive="active" class="menu-item">
+        <mat-icon mat-list-icon>
+          people
+        </mat-icon>
+      </a>
+
+      <a mat-list-item [routerLink]="['/all-games']" routerLinkActive="active" class="menu-item">
+        <mat-icon mat-list-icon>
+          sports_esports
+        </mat-icon>
+      </a>
+
+      <a mat-list-item [routerLink]="['/account/profile']" class="menu-item">
+        <mat-icon mat-list-icon>person</mat-icon>
+      </a>
+
+      <a mat-list-item [routerLink]="['/auth/login']" class="menu-item">
+        <mat-icon mat-list-icon>exit_to_app</mat-icon>
+      </a>
+    </mat-nav-list>
+    <!--<router-outlet></router-outlet>-->
+  </div>
+<div class="cont">
+  <router-outlet></router-outlet>
+</div>
+<!--<mat-sidenav-container class="navbar-sidenav-container">
+ <mat-sidenav-content class="sidenav-content">-->
+
+ <!-- <div class="progress-bar-container">
+    <mat-progress-bar color="accent" mode="indeterminate" *ngIf="spinnerService.visibility | async">
+    </mat-progress-bar>-->
+    <!-- <mat-spinner class="spinner" [diameter]="50" *ngIf="showSpinner"></mat-spinner> -->
+  <!--</div>-->
+
+
+  <!--<router-outlet></router-outlet>
+
+</mat-sidenav-content>-->
+</mat-sidenav-container>
 </div>
