feat: gameComponent but shows nothing

--- a/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.html
+++ b/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.html
@@ -30,7 +30,7 @@
         <!-- <button class="btn btn-primary my-3 play-button-pulse"
           *ngIf="userIsSpectator() && activeGame.players.length<activeGame.gameSetup.expectedNumberOfPlayers"
           (click)="joinGame()">Gioca</button> -->
-        <button class="btn btn-primary my-3 play-button-pulse" (click)="joinGame()">Gioca</button>
+        <button class="btn btn-primary my-3 play-button-pulse" (click)="joinGame()">Partecipa(join)</button>
         <h3>
           <!-- <span class="text-danger" [hidden]="activeGame.players.length===activeGame.gameSetup.expectedNumberOfPlayers"> In attesa di altri {{activeGame.gameSetup.expectedNumberOfPlayers - activeGame.players.length}} giocatori</span> -->
           <span class="text-danger" > In attesa di altri giocatori</span>
