feat: gamecompnent renders quite good

--- a/src/app/features/game/game/game.component.css
+++ b/src/app/features/game/game/game.component.css
@@ -45,6 +45,11 @@
   border-width: 5px;
 }
 
+.card-img-top{
+  height: 35%;
+  width: 35%;
+}
+
 .team1 {
   border-bottom-style: solid;
   border-color: #ffc107;
