--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -127,23 +127,23 @@
               <!-- [hidden]="!(game.cardsPlayed.length === 0)"> -->
               <div>
                 <!-- [hidden]="game.cardsPlayed.length !== 0"> -->
-                <!-- <p
+                <!-- TODO logica e' il tuo turno 
                   *ngIf="
                     currentUser.connectionId ===
                     game.userTurnToPlay.connectionId
-                  ">
-                  &Egrave; il tuo turno!
-                </p>
-                <p
+                  " -->
+                <p>&Egrave; il tuo turno!</p>
+                <!-- TODO logica e' il turno di 
                   *ngIf="
                     currentUser.connectionId !==
                     game.userTurnToPlay.connectionId
-                  ">
-                  &Egrave; il turno di: {{ game.userTurnToPlay.name }}
-                </p>
+                  " -->
+                <!-- <p>&Egrave; il turno di: {{ game.userTurnToPlay.name }}</p> -->
+                <p>&Egrave; il turno di: Hero</p>
                 <hr />
-                <p>Partita ai {{ game.gameSetup.playUntilPoints }}</p>
-                <p *ngFor="let team of game.teams">
+                <!-- <p>Partita ai {{ game.gameSetup.playUntilPoints }}</p> -->
+                <p>Partita ai 69</p>
+                <!-- <p *ngFor="let team of game.teams">
                   <strong>{{ team.name }}</strong> punti:
                   {{ team.calculatedPoints }}<br />
                 </p> -->
@@ -155,13 +155,16 @@
               *ngFor="let card of game.cardsPlayed"></app-card-player> -->
           </div>
           <div>
-            <!-- <div class="col-6" id="mazzo" *ngIf="game.players.length === 2"> -->
+            <!-- TODO mostrare 
+                *ngIf="game.players.length === 2 -->
+            <div class="col-6" id="mazzo">
             <!-- <div [hidden]="game.cardsDrew.length === 0">
               <app-card-player
                 *ngFor="let cardDrew of game.cardsDrew"
                 [isPlayedCard]="true"
                 [cardAndUser]="cardDrew"></app-card-player>
-            </div> -->
+-->
+            </div> 
             <!-- TODO logica [hidden]="game.cardsDrew.length > 0" -->
             <div>
               <div
