--- a/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/dashboard-home/dashboard-home.component.html
@@ -70,7 +70,7 @@
           <div class="games-container">
             <h2 class="lightblue-text">Partite:</h2>
             <div class="games-buttons">
-              <button mat-flat-button class="orange-button"><mat-icon
+              <button mat-flat-button class="orange-button" [routerLink]="['/waiting']"><mat-icon
                   class="waiting-player">fiber_manual_record</mat-icon>game1</button>
               <button mat-flat-button class="orange-button"><mat-icon
                   class="playing">fiber_manual_record</mat-icon>game2</button>
@@ -93,7 +93,7 @@
       </div>-->
         </div>
           <div id="played-games" class="text-center fill-viewport-max-10">
-            <h2 class="text"><b>{{getGameCount()}}</b> partite giocate</h2>
+            <h2 class="lightblue-text text"><b>{{getGameCount()}}</b> Partite giocate:</h2>
           </div>
 
           <div class="col-12 text-center small fill-viewport-max-30">
