fix: apex chart OK

--- a/src/app/features/user-info/account-page/account-page.component.html
+++ b/src/app/features/user-info/account-page/account-page.component.html
@@ -13,7 +13,7 @@
       <div class="white" fxFlex="75%" fxFlex.lt-md="50%">
         <div fxFlex></div>
           <div fxFlex="100%">
-            <apx-chart></apx-chart>
+            <app-chart></app-chart>
           </div>
         </div>
     </mat-card>
