--- a/src/app/features/user-info/account-details/account-details.component.html
+++ b/src/app/features/user-info/account-details/account-details.component.html
@@ -5,4 +5,12 @@
   <p>Numero di Cricche:<span>4</span></p>
 </div>
 
-
+<div id="chart">
+  <apx-chart
+    [series]="chartOptions.series ? chartOptions.series : []"
+    [chart]="chartOptions.chart"
+    [labels]="chartOptions.labels"
+    [responsive]="
+      chartOptions.responsive ? chartOptions.responsive : []
+    "></apx-chart>
+</div>
