--- a/src/app/features/user-info/account-details/account-details.component.css
+++ b/src/app/features/user-info/account-details/account-details.component.css
@@ -1,15 +1,29 @@
-.password-rules .mat-divider {
-    position: unset !important;
+p{
+    font-weight: bold;
 }
 
-.container{
-    padding-top: 20px;
+#maraffa_image{
+    width: 8%;
+    height: 8%;
+    border-radius: 15%;
+    margin-right: 2%;
+}
+
+.image_icon{
+    width: 24px;
+    height: 24px;
 }
 
 
-.save-button{
-    background-color: #007EA8;
-    color: white;
-    border-radius: 15px;
-    margin-left: 35%;
+@media (max-width: 600px) {
+    #maraffa_image{
+        width: 12%;
+        height: 12%;
+    }
+
+} 
+
+.img-paragraph{
+    display: flex;
+    align-items: center;
 }
